@@ -10,6 +10,8 @@
 #include "hppciProblem.h"
 #include "flicSteeringMethod.h"
 #include "reedsSheppSteeringMethod.h"
+#include "kwsPlusRoadmap.h"
+#include "hppVisRdmBuilder.h"
 
 ChppciProblem_impl::ChppciProblem_impl(ChppciServer* inHppciServer) : 
   attHppciServer(inHppciServer), attHppPlanner(inHppciServer->getHppPlanner())
@@ -40,7 +42,7 @@ CORBA::Short ChppciProblem_impl::setSteeringMethod(CORBA::Short inProblemId,
       CflicSteeringMethodShPtr steeringMethod = CflicSteeringMethod::create(inOriented);
       hppRobot->steeringMethod(steeringMethod);
     } else if (steeringMethodName == "rs") {
-      CreedsSheppSteeringMethodShPtr steeringMethod = CreedsSheppSteeringMethod::create(inOriented);
+      CreedsSheppSteeringMethodShPtr steeringMethod = CreedsSheppSteeringMethod::create(1.0, RS_ALL, inOriented);
       hppRobot->steeringMethod(steeringMethod);
     } else {
       cerr << "ChppciProblem_impl::setSteeringMethod: unknown steering method." << endl;
@@ -68,7 +70,7 @@ CORBA::Short ChppciProblem_impl::setRoadmapbuilder(CORBA::Short inProblemId, con
     CkppDeviceComponentShPtr hppRobot = attHppPlanner->robotIthProblem(hppProblemId);
 
     // Create an empty roadmap for the robot.
-    CkwsRoadmapShPtr roadmap = CkwsRoadmap::create(hppRobot);
+    CkwsPlusRoadmapShPtr roadmap = CkwsPlusRoadmap::create(hppRobot, std::string("kwsPlusRoadmap"));
     // Set arbitrary penetration.
     double penetration = 0.05;
 
@@ -83,6 +85,9 @@ CORBA::Short ChppciProblem_impl::setRoadmapbuilder(CORBA::Short inProblemId, con
       return status;      
     } else if (roadmapBuilderName == "IPP") {
       CkwsIPPRdmBuilderShPtr roadmapBuilder = CkwsIPPRdmBuilder::create(roadmap, penetration);
+      status = attHppPlanner->roadmapBuilderIthProblem(hppProblemId, roadmapBuilder);
+    } else if (roadmapBuilderName == "visibility") {
+      ChppVisRdmBuilderShPtr roadmapBuilder = ChppVisRdmBuilder::create(roadmap, penetration);
       status = attHppPlanner->roadmapBuilderIthProblem(hppProblemId, roadmapBuilder);
     } else {
       cerr << "ChppciProblem_impl::setRoadmapbuilder: unknown roadmap builder" << endl;
@@ -253,6 +258,11 @@ CORBA::Short ChppciProblem_impl::solve()
   return (CORBA::Short)status;
 }
 
+CORBA::Short ChppciProblem_impl::optimizePath(CORBA::Short inProblemId, CORBA::Short inPathId)
+{
+  ktStatus status  = attHppPlanner->optimizePath((unsigned int) inProblemId, (unsigned int) inPathId);
+  return (CORBA::Short)status;
+}
 
 dofSeq* ChppciProblem_impl::configAtDistance(CORBA::Short inProblemId, CORBA::Short pathId, CORBA::Double pathLength, CORBA::Double atDistance) {
 
@@ -313,6 +323,38 @@ CORBA::Short ChppciProblem_impl::setObstacleTolerance(CORBA::Short inProblemId, 
     cerr<<"tolerance "<<tolerance<<" set to obstacle "<<i<<endl;
   }
   
+  return 0;
+}
+
+short ChppciProblem_impl::drawRoadmap(CORBA::Short inProblemId)
+  throw(CORBA::SystemException)
+{
+  unsigned int hppProblemId = (unsigned int)inProblemId;
+
+  if (hppProblemId >= attHppPlanner->getNbHppProblems()) {
+    cerr << "ChppciProblem_impl::drawRoadmap: inProblemId = " << hppProblemId << " >= " 
+	 <<  attHppPlanner->getNbHppProblems() << endl;
+    return -1;
+  }
+  if (attHppPlanner->drawRoadmap(hppProblemId) == KD_ERROR) {
+    return -1;
+  }
+  return 0;
+}
+
+short ChppciProblem_impl::stopDrawingRoadmap(CORBA::Short inProblemId)
+    throw(CORBA::SystemException)
+{
+  unsigned int hppProblemId = (unsigned int)inProblemId;
+
+  if (hppProblemId >= attHppPlanner->getNbHppProblems()) {
+    cerr << "ChppciProblem_impl::drawRoadmap: inProblemId = " << hppProblemId << " >= " 
+	 <<  attHppPlanner->getNbHppProblems() << endl;
+    return -1;
+  }
+  if (attHppPlanner->stopdrawingRoadmap(hppProblemId) == KD_ERROR) {
+    return -1;
+  }
   return 0;
 }
 
